# mathguru

./: Cargo.toml  README.md
src/: lib.rs  matrix.rs  poly.rs  quat.rs  vector.rs
tests/: der.rs  factorize.rs  mat.rs  poly.rs  quat.rs
